# BoilerplateBuilder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  cookiecutter.json  instructions.txt  test_templates.sh
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dist.env  docker-compose.yaml  pyproject.toml  {%- if cookiecutter.project_type in ["fastapi_db", "cli_db"] %}alembic.ini{%- endif %}  {%- if cookiecutter.project_type in ["fastapi_db", "fastapi_db_agent"] %}alembic.ini{%- endif %}  {%- if cookiecutter.use_pre_commit == "yes" %}.pre-commit-config.yaml{%- endif %}
{{ cookiecutter.project_name }}/.cursor/rules/: 00-index.mdc  01-python-core.mdc  02-python-tooling.mdc  03-python-architecture.mdc  04-python-workflow.mdc
{{ cookiecutter.project_name }}/.github/workflows/: {%- if cookiecutter.use_github_actions == "yes" %}ci.yml{%- endif %}  {%- if cookiecutter.use_github_actions == "yes" %}pull_request.yml{%- endif %}
{{ cookiecutter.project_name }}/app/: main.py  router.py
{{ cookiecutter.project_name }}/app/agents/examples_agent/: agents.py  prompts.py  schemas.py
{{ cookiecutter.project_name }}/app/api/: __init__.py  {%- if cookiecutter.project_type in ["fastapi_db", "fastapi_slim"] %}__init__.py{%- endif %}
{{ cookiecutter.project_name }}/app/api/examples/: __init__.py  routes.py  schemas.py  service.py
{{ cookiecutter.project_name }}/app/api/health_checks/: __init__.py  checks.py  routes.py  schemas.py
{{ cookiecutter.project_name }}/app/api/v1/: router.py
{{ cookiecutter.project_name }}/app/api/v1/agents/: routes.py
{{ cookiecutter.project_name }}/app/api/v1/examples/: __init__.py  routes.py
{{ cookiecutter.project_name }}/app/core/: __init__.py  config.py  database.py  enums.py  exception_handlers.py  exceptions.py  lifespan.py  schemas.py  {%- if cookiecutter.project_type in ["fastapi_db", "cli_db"] %}database.py{%- endif %}
{{ cookiecutter.project_name }}/app/core/logging/: __init__.py  config.py  formatters.py  models.py
{{ cookiecutter.project_name }}/app/core/observability/: __init__.py  bootstrap.py
{{ cookiecutter.project_name }}/app/core/observability/metrics/: __init__.py  bootstrap.py  counters.py  gauges.py
{{ cookiecutter.project_name }}/app/core/observability/metrics/primitives/: __init__.py  decorators.py  enums.py
{{ cookiecutter.project_name }}/app/core/observability/tracing/: __init__.py  bootstrap.py
{{ cookiecutter.project_name }}/app/core/observability/tracing/primitives/: __init__.py  decorators.py
{{ cookiecutter.project_name }}/app/infrastructure/db/: database.py  filters.py
{{ cookiecutter.project_name }}/app/infrastructure/db/models/: __init__.py  example.py
{{ cookiecutter.project_name }}/app/infrastructure/llms/: llm_models.py  provider_bedrock.py  provider_openai.py
{{ cookiecutter.project_name }}/app/models/: __init__.py  example.py
{{ cookiecutter.project_name }}/app/modules/: README.md
{{ cookiecutter.project_name }}/app/modules/examples/: routes.py  schemas.py  service.py
{{ cookiecutter.project_name }}/app/modules/examples_agent/: agents.py  routes.py  service.py
{{ cookiecutter.project_name }}/app/modules/examples_agent/schemas/: __init__.py  schemas_agent.py  schemas_api.py
{{ cookiecutter.project_name }}/app/modules/health_checks/: routes.py  schemas.py  service.py
{{ cookiecutter.project_name }}/app/observability/: __init__.py  bootstrap.py  logging_config.py
{{ cookiecutter.project_name }}/app/observability/logging/: __init__.py  config.py  formatters.py
{{ cookiecutter.project_name }}/app/observability/metrics/: __init__.py  counters.py  gauges.py
{{ cookiecutter.project_name }}/app/observability/metrics/primitives/: __init__.py  decorators.py  enums.py
{{ cookiecutter.project_name }}/app/services/: example_agent_service.py  example_service.py
{{ cookiecutter.project_name }}/local_telemetry/alloy/: config.alloy
{{ cookiecutter.project_name }}/local_telemetry/grafana/dashboards/: dashboard.json
{{ cookiecutter.project_name }}/local_telemetry/grafana/provisioning/dashboards/: dashboards.yaml
{{ cookiecutter.project_name }}/local_telemetry/grafana/provisioning/datasources/: datasources.yaml
{{ cookiecutter.project_name }}/local_telemetry/loki/: config.yaml
{{ cookiecutter.project_name }}/local_telemetry/otel-collector/: config.yaml
{{ cookiecutter.project_name }}/local_telemetry/prometheus/: prometheus.yml
{{ cookiecutter.project_name }}/local_telemetry/promtail/: config.yml
{{ cookiecutter.project_name }}/local_telemetry/tempo/: tempo.yaml
{{ cookiecutter.project_name }}/migrations/: env.py  {%- if cookiecutter.project_type in ["fastapi_db", "cli_db"] %}env.py{%- endif %}  {%- if cookiecutter.project_type in ["fastapi_db", "fastapi_db_agent"] %}env.py{%- endif %}
{{ cookiecutter.project_name }}/migrations/versions/: 2023-12-29-12-36_add_example_model.py  {%- if cookiecutter.project_type in ["fastapi_db", "fastapi_db_agent"] %}2023-12-29-12-36_add_example_model.py{%- endif %}
{{ cookiecutter.project_name }}/tests/: conftest.py  dependencies.py  factories.py
{{ cookiecutter.project_name }}/tests/api/: test_agents.py  test_example.py  test_examples.py  test_health_check.py  test_health_checks.py
{{ cookiecutter.project_name }}/tests/mocks/: agent_mocks.py
{{ cookiecutter.project_name }}/tests/unit/: __init__.py  test_config_validators.py  test_dummy.py  test_main.py
{{ cookiecutter.project_name }}/tests/unit/core/logging/: test_config.py  test_formatters.py
{{ cookiecutter.project_name }}/tests/unit/core/observability/: mocks.py  test_bootstrap.py
{{ cookiecutter.project_name }}/tests/unit/core/observability/metrics/: __init__.py  test_bootstrap.py  test_decorators.py
{{ cookiecutter.project_name }}/tests/unit/observability/: __init__.py  test_metrics_decorators.py
{{ cookiecutter.project_name }}/{%- if cookiecutter.add_cursor_rules == "yes" %}.cursor{%- endif %}/rules/: 00-index.mdc  01-python-core.mdc
(+8 files in other folders)
