[project]
name = "{{ cookiecutter.project_name.lower() }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"

dependencies = [
{%- if cookiecutter.project_type == "fastapi_db" %}
    "alembic>=1.17.2",
    "fastapi>=0.127.0",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.38.0",
{%- elif cookiecutter.project_type == "fastapi_slim" %}
    "fastapi>=0.127.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "uvicorn[standard]>=0.38.0",
{%- elif cookiecutter.project_type == "cli_db" %}
    "alembic>=1.17.1",
    "psycopg[binary]>=3.2.12",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "sqlalchemy>=2.0.45",
{%- else %}
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
{%- endif %}
{%- if cookiecutter.use_otel_observability == "yes" %}
    # Observability
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-instrumentation-logging>=0.60b1",
    "opentelemetry-semantic-conventions>=0.60b1",
    "prometheus-client>=0.23.1",
{%- if cookiecutter.project_type in ["fastapi_db", "fastapi_slim"] %}
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-exporter-prometheus>=0.60b1",
    "prometheus-fastapi-instrumentator>=7.1.0",
{%- endif %}
{%- if cookiecutter.project_type in ["fastapi_db", "cli_db"] %}
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
{%- endif %}
{%- endif %}
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pre-commit>=4.5.1",
{%- if cookiecutter.project_type in ["fastapi_db", "fastapi_slim"] %}
    "httpx>=0.28.1",
{%- endif %}
    "polyfactory>=2.22.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
{%- if cookiecutter.project_type in ["fastapi_db", "cli_db"] %}
    "testcontainers[postgres]>=4.13.2",
{%- endif %}
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
{%- if cookiecutter.project_type in ["fastapi_db", "cli_db"] %}
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers.core.waiting_utils",
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers.postgres",
{%- endif %}
]

[tool.ruff]
line-length = 120
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"
exclude = [
    ".venv",
    #    Include ignore folders if needed
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # Errors
    "F", # Pyflakes
    "I", # isort
    "T20", # flake8-print
    "ASYNC", # flake8-async
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # McCabe complexity
    "DTZ", # flake8-datetimez
    "ARG", # flake8-unused-arguments
    "FAST", # FastAPI
]
pydocstyle.convention = 'google'

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]

[tool.ruff.lint.isort]
known-local-folder = ["tests", "app", "scripts"]
split-on-trailing-comma = true
combine-as-imports = true
case-sensitive = false
detect-same-package = true
order-by-type = false  # Sorting of all imported objects (functions, classes, etc.) regardless of their type
force-sort-within-sections = true  # Don't sort straight-style imports before from-style imports.
