[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"

dependencies = [
    "fastapi>=0.136.1",
    "pydantic-settings>=2.14.1",
    "pydantic>=2.13.4",
    "uvicorn[standard]>=0.47.0",
{%- if cookiecutter.project_type in ["fastapi_db", "fastapi_db_agent"] %}
    "alembic>=1.18.4",
    "fastapi-pagination>=0.15.13",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy[asyncio]>=2.0.49",
{%- endif %}
{%- if cookiecutter.project_type in ["fastapi_agent", "fastapi_db_agent"] %}
    "boto3>=1.43.13",
    "boto3-stubs[bedrock-runtime]>=1.43.13",
    "pydantic-ai-slim[openai,bedrock]>=1.101.0",
    "pydantic-extra-types>=2.11.1",
{%- endif %}
{%- if cookiecutter.use_otel_observability == "yes" %}
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-logging>=0.63b1",
    "opentelemetry-semantic-conventions>=0.63b1",
    "prometheus-client>=0.25.0",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "prometheus-fastapi-instrumentator>=7.1.0",
{%- if cookiecutter.project_type in ["fastapi_db", "fastapi_db_agent"] %}
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
{%- endif %}
{%- endif %}
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.38",
    "prek>=0.4.1",
    "complexipy>=5.4.1",
    "httpx>=0.28.1",
    "polyfactory>=3.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "freezegun>=1.5.5",
{%- if cookiecutter.project_type in ["fastapi_db", "fastapi_db_agent"] %}
    "testcontainers[postgres]>=4.14.2",
{%- endif %}
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
{%- if cookiecutter.project_type in ["fastapi_db", "fastapi_db_agent"] %}
filterwarnings = [
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers.core.waiting_utils",
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning:testcontainers.postgres",
]
{%- endif %}

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.ruff]
line-length = 120
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
exclude = [
    ".venv",
    #    Include ignore folders if needed
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # Errors
    "F", # Pyflakes
    "I", # isort
    "S", # flake8-bandit
    "T20", # flake8-print
    "ASYNC", # flake8-async
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # McCabe complexity
    "DTZ", # flake8-datetimez
    "ARG", # flake8-unused-arguments
    "BLE", # flake8-blind-except
    "ERA", # eradicate - commented Python code
    "ANN", # flake8-annotations
    "FAST", # FastAPI
    "RUF", # Ruff-specific rules
]
pydocstyle.convention = 'google'

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "ANN"]
"migrations/*" = ["ANN"]

[tool.ruff.lint.isort]
known-local-folder = ["tests", "app", "scripts"]
split-on-trailing-comma = true
combine-as-imports = true
case-sensitive = false
detect-same-package = true
order-by-type = false  # Sorting of all imported objects (functions, classes, etc.) regardless of their type
force-sort-within-sections = true  # Don't sort straight-style imports before from-style imports.
